Added MonsterHealth Script and implemented death functionality
Monster takes damage dependent on how fast the ball is going on contact.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,18 @@ sysinfo.txt
 # Builds
 *.apk
 *.unitypackage
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe8.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe7.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe6.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe5.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe4.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe3.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe2.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe1.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe0.log
+HellscapeTennisClub/Logs/shadercompiler-AssetImportWorker0.log
+HellscapeTennisClub/Logs/AssetImportWorker0.log
+HellscapeTennisClub/Logs/AssetImportWorker0-prev.log
+HellscapeTennisClub/Logs/AssetImportWorker0-prev.log
+HellscapeTennisClub/Logs/AssetImportWorker0.log
+HellscapeTennisClub/Logs/shadercompiler-UnityShaderCompiler.exe0.log
